# JarvisV2

./: .gitignore  README.md  pom.xml
Clients/OpenCVTest/: settings.gradle
Clients/OpenCVTest/app/: build.gradle
Clients/OpenCVTool/: import-summary.txt  settings.gradle
Clients/OpenCVTool/app/: build.gradle
Clients/TestPlatform/: index.html  package-lock.json  package.json  vite.config.ts
Clients/TestPlatform/src/: App.vue  main.ts
Clients/Web/: index.html
Clients/Web/js/: client.js
Cmdb/: pom.xml
ControlCenter/Antlr/test/: Hello.g4  HelloLexer.interp  (+4 more)
Docs/: 代码架构图.drawio
Gateway/: pom.xml
MessageService/: pom.xml
Modules/: pom.xml
Modules/MessageCenter/: pom.xml
Modules/ServiceApi/: pom.xml
Modules/common/: pom.xml
Modules/journal/: pom.xml
Modules/log/: pom.xml
ProductService/: pom.xml
ServiceApi/: pom.xml
Services/: pom.xml
Services/AuthManagement/: pom.xml
Services/DeviceService/: pom.xml
Services/MessageService/: pom.xml
Services/ProductService/: pom.xml
Services/Search/: pom.xml
Services/SkillService/: pom.xml
Services/UserService/: pom.xml
SkillService/: pom.xml
UserService/: pom.xml
native/: CMakeCache.txt  CMakeLists.txt  Jarvis  Makefile  cmake_install.cmake  main.cpp
native/commons/: jarvis.h
native/config/: jarvis.json
native/entity/: car_oil.h
native/utils/: car_oil_util.hpp  json_util.hpp  mqtt_util.hpp  mysql_connector.hpp  selection_sort_util.hpp  sort_util.hpp
python/: Stock.py
python/Service/: manage.py
python/stock_data/: stock_util.py
python/voice/: my_sleep.m4a  wav_proc.py
(+193 files in other folders)
